# komono

./: .flake8  pyproject.toml  setup.cfg
src/komono/: __init__.py
src/komono/cluster/: __init__.py  _elbow.py
src/komono/embedding/: __init__.py  _jointplot.py
src/komono/pandas/: __init__.py  _reduce_memory.py  _resuce_memory.py
src/komono/visualize/: embedding.py
tests/: test_reduce_memory.py
