[tool.poetry]
name = "komono"
version = "0.1.0"
description = "Very tiny python library for my analysis."
authors = ["nagomiso <daiseigi.giants+github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
isort = "^5.7.0"
flake8 = "^3.9.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
