[tool.poetry]
name = "komono"
version = "0.1.0"
description = "Very tiny python library for my analysis."
authors = ["nagomiso <daiseigi.giants+github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.20.1"
scipy = "^1.6.1"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
umap-learn = "^0.5.1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
isort = "^5.7.0"
flake8 = "^3.9.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
