[tool.poetry]
name = "komono"
version = "0.1.0"
description = "Very tiny python library for my analysis."
authors = ["nagomiso <daiseigi.giants+github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.20.1"
scipy = "^1.6.1"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
isort = "^5.8.0"
pre-commit = "^2.11.1"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
known_third_party = "numpy,scipy,sklearn,matplotlib,seaborn,pandas"
known_first_party = "komono"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = """
    -s \
    -vv"""
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
